# PlateauUtils

./: .gitignore  LICENSE  README.md  README.rst  dev-requirements.txt  index.html  index.json  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  documentation.yml
doc/: conf.py  index.rst  modules.rst  plateauutils.citygmlfinder.rst  plateauutils.flood_converter.rst  plateauutils.mesh_geocorder.rst  plateauutils.parser.rst  plateauutils.rst  plateauutils.tile_list.rst
manual/: CONTRIBUTING.html  devMan.html  toc.html  toc.json  userMan.html
markdown/: index.md
markdown/manual/: CONTRIBUTING.md  devMan.md  toc.yml  userMan.md
markdown/resources/: Thumbs.db
markdown/resources/userMan/: Thumbs.db
plateauutils/: cli.py
plateauutils/abc/: numpy_tile_parser.py  plateau_parser.py  polygon_to_list.py
plateauutils/citygmlfinder/: from_reearth_cms.py
plateauutils/citygmlfinder/tests/: data1.json  data2.json  data3.json  data4.json  test_from_reearth_cms.py
plateauutils/flood_converter/: flood_to_3dtiles.py  flood_to_png.py  flood_to_xyz.py
plateauutils/flood_converter/tests/: test_flood_to_3dtiles.py  test_flood_to_xyz.py
plateauutils/mesh_geocorder/: geo_to_mesh.py  polygon_to_meshcode_list.py
plateauutils/mesh_geocorder/tests/: test_geo_to_mesh.py  test_polygon_to_meshcode_list.py
plateauutils/parser/: city_gml_parser.py  mvt_tile_parser.py
plateauutils/parser/tests/: test_city_gml_parser.py  test_mvt_tile_parser.py
plateauutils/tests/: test_cli.py
plateauutils/tile_list/: geo_to_tile.py  polygon_to_tile_list.py
(+3 files in other folders)
